--- a/build.gradle
+++ b/build.gradle
@@ -16,8 +16,12 @@ apply plugin: 'kotlin'
 
 repositories {
     mavenCentral()
+    maven { url "http://dl.bintray.com/jetbrains/spek" }
 }
 
 dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib-jre8:$kotlin_version"
+    testCompile 'org.jetbrains.kotlin:kotlin-test:1.1.0'
+    testCompile 'org.jetbrains.spek:spek-api:1.1.0'
+    testRuntime 'org.jetbrains.spek:spek-junit-platform-engine:1.1.0'
 }
